# final-exam-kmich5l

./: README.md  facts.py  image.py  main.py  pyproject.toml
